Made cropper work.

--- a/testapp_rails3/app/views/layouts/application.html.erb
+++ b/testapp_rails3/app/views/layouts/application.html.erb
@@ -4,6 +4,8 @@
   <title>Testapp</title>
   <%= stylesheet_link_tag :all %>
   <%= javascript_include_tag '//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js' %>
+  <%= javascript_include_tag 'jquery.fancybox.pack.js' %>
+  <%= stylesheet_link_tag 'jquery.fancybox.css' %>
   <%= imaginable_includes_tag %>
   <%= csrf_meta_tag %>
 </head>
